@@ -823,7 +823,7 @@ dll_crt0_1 (void *)
 	small_printf ("cmalloc returns %p\n", cmalloc (HEAP_STR, n));
       else
 	{
-	  small_printf ("total allocated %p\n", (i - 1) * n);
+	  small_printf ("total allocated %y\n", (i - 1) * n);
 	  break;
 	}
     }
@@ -1229,9 +1229,9 @@ multiple_cygwin_problem (const char *what, uintptr_t magic_version, uintptr_t ve
     return;
 
   if (CYGWIN_VERSION_MAGIC_VERSION (magic_version) == version)
-    system_printf ("%s magic number mismatch detected - %p/%p", what, magic_version, version);
+    system_printf ("%s magic number mismatch detected - %p/%ly", what, magic_version, version);
   else
-    api_fatal ("%s mismatch detected - %p/%p.\n\
+    api_fatal ("%s mismatch detected - %p/%ly.\n\
 This problem is probably due to using incompatible versions of the cygwin DLL.\n\
 Search for cygwin1.dll using the Windows Start->Find/Search facility\n\
 and delete all but the most recent version.  The most recent version *should*\n\
