@@ -1356,7 +1356,7 @@ _cygtls::signal_debugger (int sig)
   if (isinitialized () && being_debugged ())
     {
       char sigmsg[2 * sizeof (_CYGWIN_SIGNAL_STRING " ffffffff ffffffff")];
-      __small_sprintf (sigmsg, _CYGWIN_SIGNAL_STRING " %d %p %p", sig, thread_id, &thread_context);
+      __small_sprintf (sigmsg, _CYGWIN_SIGNAL_STRING " %d %y %p", sig, thread_id, &thread_context);
       OutputDebugString (sigmsg);
     }
 }
