@@ -1,7 +1,6 @@
 /* sys/param.h
 
-   Copyright 1996, 1997, 1998, 2002, 2003, 2005, 2007, 2009, 2011, 2012 Red
-   Hat, Inc.
+   Copyright 1996, 1997, 1998, 2002, 2003, 2007, 2009, 2011, 2012 Red Hat, Inc.
 
    This software is a copyrighted work licensed under the terms of the
    Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
