@@ -1,3 +1,12 @@
+2012-10-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/sys/param.h: Include stddef.h to define NULL.
+
+2012-10-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Fix using
+	wrong value in condition.
+
 2012-10-30  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/sys/cygwin.h: Add missing defines for CW_ALLOC_DRIVE_MAP,
